k8s-test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-svc
  namespace: ingress-demo
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
